--- a/ESP3D-TFT/CMakeLists.txt
+++ b/ESP3D-TFT/CMakeLists.txt
@@ -6,4 +6,6 @@ cmake_minimum_required(VERSION 3.8)
 set(CMAKE_CXX_STANDARD 17)
 set(EXTRA_COMPONENT_DIRS components)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(EvalCpp)
+project(ESP3D-TFT
+    VERSION 1.0
+    DESCRIPTION "ESP3D TFT")
