Code base for multiple targets support (Currently 2)
Clean Project ReadMe

--- a/ESP3D-TFT/CMakeLists.txt
+++ b/ESP3D-TFT/CMakeLists.txt
@@ -5,6 +5,21 @@
 cmake_minimum_required(VERSION 3.8)
 set(CMAKE_CXX_STANDARD 17)
 set(EXTRA_COMPONENT_DIRS components)
+OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches" OFF)
+OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3_HMI 4.3inches" ON)
+
+if(ESP32_2432S028R)
+    set(SDKCONFIG targets/ESP32_2432S028R/sdkconfig)
+    set(TFT_TARGET "ESP32_2432S028R")
+    add_compile_options(-DTFT_TARGET="ESP32_2432S028R")
+elseif(ESP32S3_HMI43V3)
+    set(SDKCONFIG targets/ESP32S3_HMI43V3/sdkconfig)
+    set(TFT_TARGET "ESP32S3_HMI43V3")
+    add_compile_options(-DTFT_TARGET="ESP32S3_HMI43V3")
+else()
+    message(FATAL_ERROR "No target defined, CMake will exit.")
+endif()
+
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(ESP3D-TFT
     VERSION 1.0
