Add Rotrics option
Rename Rotrics references file to follow same style as others

--- a/ESP3D-TFT/CMakeLists.txt
+++ b/ESP3D-TFT/CMakeLists.txt
@@ -1,12 +1,16 @@
-# For more information about build system see
-# https://docs.espressif.com/projects/esp-idf/en/latest/api-guides/build-system.html
-# The following five lines of boilerplate have to be in your project's
-# CMakeLists in this exact order for cmake to work correctly
+# #######################################
+# Select the target
+# #######################################
+OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches" ON)
+OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3_HMI 4.3inches" OFF)
+OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
+
+# #######################################
+# Do not change anything above this line
+# #######################################
 cmake_minimum_required(VERSION 3.8)
 set(CMAKE_CXX_STANDARD 17)
 set(EXTRA_COMPONENT_DIRS components)
-OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches" OFF)
-OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3_HMI 4.3inches" ON)
 
 if(ESP32_2432S028R)
     set(SDKCONFIG targets/ESP32_2432S028R/sdkconfig)
@@ -16,6 +20,10 @@ elseif(ESP32S3_HMI43V3)
     set(SDKCONFIG targets/ESP32S3_HMI43V3/sdkconfig)
     set(TFT_TARGET "ESP32S3_HMI43V3")
     add_compile_options(-DTFT_TARGET="ESP32S3_HMI43V3")
+elseif(ESP32_ROTRICS_DEXARM35)
+    set(SDKCONFIG targets/ESP32_ROTRICS_DEXARM35/sdkconfig)
+    set(TFT_TARGET "ESP32_ROTRICS_DEXARM35")
+    add_compile_options(-DTFT_TARGET="ESP32_ROTRICS_DEXARM35")
 else()
     message(FATAL_ERROR "No target defined, CMake will exit.")
 endif()
