--- a/ESP3D-TFT/CMakeLists.txt
+++ b/ESP3D-TFT/CMakeLists.txt
@@ -2,8 +2,9 @@
 # Select the target
 # #######################################
 OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches" ON)
-OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3_HMI 4.3inches" OFF)
+OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" OFF)
 OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
+OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-USRC-4832 3.5inches" OFF)
 
 # #######################################
 # Do not change anything above this line
@@ -14,16 +15,16 @@ set(EXTRA_COMPONENT_DIRS components)
 
 if(ESP32_2432S028R)
     set(SDKCONFIG targets/ESP32_2432S028R/sdkconfig)
-    set(TFT_TARGET "ESP32_2432S028R")
     add_compile_options(-DTFT_TARGET="ESP32_2432S028R")
 elseif(ESP32S3_HMI43V3)
     set(SDKCONFIG targets/ESP32S3_HMI43V3/sdkconfig)
-    set(TFT_TARGET "ESP32S3_HMI43V3")
     add_compile_options(-DTFT_TARGET="ESP32S3_HMI43V3")
 elseif(ESP32_ROTRICS_DEXARM35)
     set(SDKCONFIG targets/ESP32_ROTRICS_DEXARM35/sdkconfig)
-    set(TFT_TARGET "ESP32_ROTRICS_DEXARM35")
     add_compile_options(-DTFT_TARGET="ESP32_ROTRICS_DEXARM35")
+elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
+    set(SDKCONFIG targets/ESP32S3_ZX3D50CE02S_USRC_4832/sdkconfig)
+    add_compile_options(-DTFT_TARGET="ESP32S3_ZX3D50CE02S_USRC_4832")
 else()
     message(FATAL_ERROR "No target defined, CMake will exit.")
 endif()
