--- a/ESP3D-TFT/CMakeLists.txt
+++ b/ESP3D-TFT/CMakeLists.txt
@@ -11,20 +11,23 @@ OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-U
 # #######################################
 cmake_minimum_required(VERSION 3.8)
 set(CMAKE_CXX_STANDARD 17)
-set(EXTRA_COMPONENT_DIRS components)
 
 if(ESP32_2432S028R)
     set(SDKCONFIG targets/ESP32_2432S028R/sdkconfig)
     add_compile_options(-DTFT_TARGET="ESP32_2432S028R")
+    set(EXTRA_COMPONENT_DIRS targets/ESP32_2432S028R/components)
 elseif(ESP32S3_HMI43V3)
     set(SDKCONFIG targets/ESP32S3_HMI43V3/sdkconfig)
     add_compile_options(-DTFT_TARGET="ESP32S3_HMI43V3")
+    set(EXTRA_COMPONENT_DIRS targets/ESP32S3_HMI43V3/components)
 elseif(ESP32_ROTRICS_DEXARM35)
     set(SDKCONFIG targets/ESP32_ROTRICS_DEXARM35/sdkconfig)
     add_compile_options(-DTFT_TARGET="ESP32_ROTRICS_DEXARM35")
+    set(EXTRA_COMPONENT_DIRS targets/ESP32_ROTRICS_DEXARM35/components)
 elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
     set(SDKCONFIG targets/ESP32S3_ZX3D50CE02S_USRC_4832/sdkconfig)
     add_compile_options(-DTFT_TARGET="ESP32S3_ZX3D50CE02S_USRC_4832")
+    set(EXTRA_COMPONENT_DIRS targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
 else()
     message(FATAL_ERROR "No target defined, CMake will exit.")
 endif()
