--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,28 +14,51 @@ set(CMAKE_CXX_STANDARD 17)
 
 if(ESP32_2432S028R)
     set(SDKCONFIG targets/ESP32_2432S028R/sdkconfig)
-    add_compile_options(-DTFT_TARGET="ESP32_2432S028R")
     set(EXTRA_COMPONENT_DIRS targets/ESP32_2432S028R/components)
-    message(STATUS "*****************************")
-    message(STATUS "* Target is ESP32_2432S028R *")
-    message(STATUS "*****************************")
 elseif(ESP32S3_HMI43V3)
     set(SDKCONFIG main/targets/ESP32S3_HMI43V3/sdkconfig)
-    add_compile_options(-DTFT_TARGET="ESP32S3_HMI43V3")
     set(EXTRA_COMPONENT_DIRS main/targets/ESP32S3_HMI43V3/components)
 elseif(ESP32_ROTRICS_DEXARM35)
     set(SDKCONFIG main/targets/ESP32_ROTRICS_DEXARM35/sdkconfig)
-    add_compile_options(-DTFT_TARGET="ESP32_ROTRICS_DEXARM35")
     set(EXTRA_COMPONENT_DIRS main/targets/ESP32_ROTRICS_DEXARM35/components)
 elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
     set(SDKCONFIG main/targets/ESP32S3_ZX3D50CE02S_USRC_4832/sdkconfig)
-    add_compile_options(-DTFT_TARGET="ESP32S3_ZX3D50CE02S_USRC_4832")
     set(EXTRA_COMPONENT_DIRS main/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
 else()
     message(FATAL_ERROR "No target defined, CMake will exit.")
 endif()
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+
+# For lvgl_conf to use simple path
+add_compile_options(-DLV_CONF_INCLUDE_SIMPLE=1)
+
+if(ESP32_2432S028R)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32_2432S028R/components/lvgl_conf")
+    set(EXTRA_COMPONENT_DIRS targets/ESP32_2432S028R/components)
+    set(TFT_TARGET "ESP32_2432S028R")
+elseif(ESP32S3_HMI43V3)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32S3_HMI43V3/components/lvgl_conf")
+    set(EXTRA_COMPONENT_DIRS main/targets/ESP32S3_HMI43V3/components)
+    set(TFT_TARGET "ESP32S3_HMI43V3")
+elseif(ESP32_ROTRICS_DEXARM35)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32_ROTRICS_DEXARM35/components/lvgl_conf")
+    set(EXTRA_COMPONENT_DIRS main/targets/ESP32_ROTRICS_DEXARM35/components)
+    set(TFT_TARGET "ESP32_ROTRICS_DEXARM35")
+elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
+    add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components/lvgl_conf")
+    set(EXTRA_COMPONENT_DIRS main/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
+    set(TFT_TARGET "ESP32S3_ZX3D50CE02S_USRC_4832")
+endif()
+
+add_compile_options(-DTFT_TARGET="${TFT_TARGET}")
 project(ESP3D-TFT
     VERSION 1.0
     DESCRIPTION "ESP3D TFT")
+message(STATUS "")
+message(STATUS "----Project definition----")
+message(STATUS "PROJECT_NAME = ${PROJECT_NAME}")
+message(STATUS "TFT_TARGET = ${TFT_TARGET}")
+message(STATUS "IDF_TARGET = ${IDF_TARGET}")
+message(STATUS "--------------------------")
+message(STATUS "")
