--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 # #######################################
 # Select the target
 # #######################################
-OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches" ON)
+OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches" OFF)
 OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" OFF)
-OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
+OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" ON)
 OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-USRC-4832 3.5inches" OFF)
 
 # #######################################
@@ -16,14 +16,14 @@ if(ESP32_2432S028R)
     set(SDKCONFIG targets/ESP32_2432S028R/sdkconfig)
     set(EXTRA_COMPONENT_DIRS targets/ESP32_2432S028R/components)
 elseif(ESP32S3_HMI43V3)
-    set(SDKCONFIG main/targets/ESP32S3_HMI43V3/sdkconfig)
-    set(EXTRA_COMPONENT_DIRS main/targets/ESP32S3_HMI43V3/components)
+    set(SDKCONFIG targets/ESP32S3_HMI43V3/sdkconfig)
+    set(EXTRA_COMPONENT_DIRS targets/ESP32S3_HMI43V3/components)
 elseif(ESP32_ROTRICS_DEXARM35)
-    set(SDKCONFIG main/targets/ESP32_ROTRICS_DEXARM35/sdkconfig)
-    set(EXTRA_COMPONENT_DIRS main/targets/ESP32_ROTRICS_DEXARM35/components)
+    set(SDKCONFIG targets/ESP32_ROTRICS_DEXARM35/sdkconfig)
+    set(EXTRA_COMPONENT_DIRS targets/ESP32_ROTRICS_DEXARM35/components)
 elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
-    set(SDKCONFIG main/targets/ESP32S3_ZX3D50CE02S_USRC_4832/sdkconfig)
-    set(EXTRA_COMPONENT_DIRS main/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
+    set(SDKCONFIG targets/ESP32S3_ZX3D50CE02S_USRC_4832/sdkconfig)
+    set(EXTRA_COMPONENT_DIRS targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
 else()
     message(FATAL_ERROR "No target defined, CMake will exit.")
 endif()
@@ -39,15 +39,15 @@ if(ESP32_2432S028R)
     set(TFT_TARGET "ESP32_2432S028R")
 elseif(ESP32S3_HMI43V3)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32S3_HMI43V3/components/lvgl_conf")
-    set(EXTRA_COMPONENT_DIRS main/targets/ESP32S3_HMI43V3/components)
+    set(EXTRA_COMPONENT_DIRS targets/ESP32S3_HMI43V3/components)
     set(TFT_TARGET "ESP32S3_HMI43V3")
 elseif(ESP32_ROTRICS_DEXARM35)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32_ROTRICS_DEXARM35/components/lvgl_conf")
-    set(EXTRA_COMPONENT_DIRS main/targets/ESP32_ROTRICS_DEXARM35/components)
+    set(EXTRA_COMPONENT_DIRS targets/ESP32_ROTRICS_DEXARM35/components)
     set(TFT_TARGET "ESP32_ROTRICS_DEXARM35")
 elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components/lvgl_conf")
-    set(EXTRA_COMPONENT_DIRS main/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
+    set(EXTRA_COMPONENT_DIRS targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
     set(TFT_TARGET "ESP32S3_ZX3D50CE02S_USRC_4832")
 endif()
 
