--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Select the target
 # #######################################
 OPTION(ESP32_2432S028R "TFT TARGET is ESP32_2432S028R 2.8inches" OFF)
-OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" OFF)
+OPTION(ESP32S3_HMI43V3 "TFT TARGET is ESP32S3 HMI 4.3inches" ON)
 OPTION(ESP32_ROTRICS_DEXARM35 "TFT TARGET is ESP32 Rotrics DexArm 3.5inches" OFF)
 OPTION(ESP32S3_ZX3D50CE02S_USRC_4832 "TFT TARGET is ESP32S3 Panlee ZX3D50CE02S-USRC-4832 3.5inches" OFF)
 
@@ -37,6 +37,15 @@ include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 # For lvgl_conf to use simple path
 add_compile_options(-DLV_CONF_INCLUDE_SIMPLE=1)
 add_compile_options(-DLV_LVGL_H_INCLUDE_SIMPLE=1)
+
+# log level
+# NONE  = 0       /*!< No log output */
+# ERROR = 1       /*!< Critical errors, software module can not recover on its own */
+# WARN  = 2       /*!< Error conditions from which recovery measures have been taken */
+# INFO  = 3       /*!< Information messages which describe normal flow of events */
+# DEBUG = 4       /*!< Extra information which is not necessary for normal use (values, pointers, sizes, etc). */
+# VERBOSE= 5
+add_compile_options(-DLOG_LEVEL_LOCAL=5)
 
 if(ESP32_2432S028R)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32_2432S028R/components/bsp")
