--- a/components/littlefs/CMakeLists.txt
+++ b/components/littlefs/CMakeLists.txt
@@ -1,5 +1,16 @@
-# Component directive
-set(SOURCES "")
-set(INCLUDES .)
-idf_component_register(SRCS ${SOURCES}
-    INCLUDE_DIRS ${INCLUDES})
+cmake_minimum_required(VERSION 3.10)
+
+file(GLOB SOURCES src/littlefs/*.c)
+list(APPEND SOURCES src/esp_littlefs.c src/littlefs_api.c src/lfs_config.c)
+
+idf_component_register(
+    SRCS ${SOURCES}
+    INCLUDE_DIRS include
+    PRIV_INCLUDE_DIRS src
+    PRIV_REQUIRES esptool_py spi_flash vfs
+)
+
+set_source_files_properties(
+    ${SOURCES}
+    PROPERTIES COMPILE_FLAGS "-DLFS_CONFIG=lfs_config.h"
+)
