--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 # main application directives
-set(SOURCES . core)
-set(INCLUDES . core/includes)
+set(SOURCES . core modules/network)
+set(INCLUDES . core/includes modules/network)
 idf_component_register(SRC_DIRS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES})
