--- a/targets/ESP32S3_HMI43V3/components/ft5x06/CMakeLists.txt
+++ b/targets/ESP32S3_HMI43V3/components/ft5x06/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "ft5x06.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES lvgl i2c_bus
+    REQUIRES esp3d_log lvgl i2c_bus
 )
