--- a/targets/ESP32S3_HMI43V3/components/rm68120/CMakeLists.txt
+++ b/targets/ESP32S3_HMI43V3/components/rm68120/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "rm68120.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES lvgl esp_lcd
+    REQUIRES esp3d_log lvgl esp_lcd
 )
