--- a/targets/ESP32S3_HMI43V3/components/tca9554/CMakeLists.txt
+++ b/targets/ESP32S3_HMI43V3/components/tca9554/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "tca9554.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES i2c_bus
+    REQUIRES esp3d_log i2c_bus
 )
