--- a/targets/ESP32_2432S028R/components/disp_spi/CMakeLists.txt
+++ b/targets/ESP32_2432S028R/components/disp_spi/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "disp_spi.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES lvgl
+    REQUIRES esp3d_log lvgl
 )
