--- a/targets/ESP32_2432S028R/components/lcd_backlight/CMakeLists.txt
+++ b/targets/ESP32_2432S028R/components/lcd_backlight/CMakeLists.txt
@@ -2,4 +2,5 @@
 set(SOURCES "esp_lcd_backlight.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
-    INCLUDE_DIRS ${INCLUDES})
+    INCLUDE_DIRS ${INCLUDES}
+    REQUIRES esp3d_log)
