--- a/targets/ESP32_2432S028R/components/xpt2046/CMakeLists.txt
+++ b/targets/ESP32_2432S028R/components/xpt2046/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "xpt2046.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES lvgl touch_spi
+    REQUIRES esp3d_log lvgl touch_spi
 )
