--- a/targets/ESP32_ROTRICS_DEXARM35/components/bsp/CMakeLists.txt
+++ b/targets/ESP32_ROTRICS_DEXARM35/components/bsp/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Component directive
 idf_component_register(SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES lvgl xpt2046 ili9488 spi_bus disp_spi touch_spi lcd_backlight
+    REQUIRES esp3d_log lvgl xpt2046 ili9488 spi_bus disp_spi touch_spi lcd_backlight
 )
