--- a/targets/ESP32_ROTRICS_DEXARM35/components/ili9488/CMakeLists.txt
+++ b/targets/ESP32_ROTRICS_DEXARM35/components/ili9488/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "ili9488.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES lvgl disp_spi
+    REQUIRES esp3d_log lvgl disp_spi
 )
