--- a/targets/ESP32S3_HMI43V3/components/bsp/CMakeLists.txt
+++ b/targets/ESP32S3_HMI43V3/components/bsp/CMakeLists.txt
@@ -1,5 +1,5 @@
 # Component directive
 idf_component_register(SRCS "bsp.c"
     INCLUDE_DIRS .
-    REQUIRES lvgl i2c_bus ft5x06 rm68120 tca9554
+    REQUIRES esp3d_log lvgl i2c_bus ft5x06 rm68120 tca9554
 )
