--- a/targets/ESP32S3_HMI43V3/components/i2c_bus/CMakeLists.txt
+++ b/targets/ESP32S3_HMI43V3/components/i2c_bus/CMakeLists.txt
@@ -3,4 +3,5 @@ set(SOURCES "i2c_bus.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
+    REQUIRES esp3d_log
 )
