--- a/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components/i2c_bus/CMakeLists.txt
+++ b/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components/i2c_bus/CMakeLists.txt
@@ -3,4 +3,5 @@ set(SOURCES "i2c_bus.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
+    REQUIRES esp3d_log
 )
