--- a/targets/ESP32_2432S028R/components/spi_bus/CMakeLists.txt
+++ b/targets/ESP32_2432S028R/components/spi_bus/CMakeLists.txt
@@ -3,4 +3,5 @@ set(SOURCES "spi_bus.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
+    REQUIRES esp3d_log
 )
