Add esp parameters parsing functions
Add str_toUpperCase helper
Simplify esp command filtering
Add code base for esp commands POC with ESP0 and ESP420 - WIP
Add some static procedures to Esp3DClient class
Use msg helper in serial client class and fix delete vs free typo
Update serial client with command flow

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,5 @@
 # main application directives
-set(SOURCES . core modules/authentication modules/serial modules/filesystem modules/filesystem/sd)
+set(SOURCES . core core/esp3dcommands modules/authentication modules/serial modules/filesystem modules/filesystem/sd)
 set(INCLUDES . core/includes modules)
 idf_component_register(SRC_DIRS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES})
