--- a/targets/ESP32_2432S028R/components/xpt2046_no_spi/CMakeLists.txt
+++ b/targets/ESP32_2432S028R/components/xpt2046_no_spi/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Component directive
-set(SOURCES "touch_spi.c")
+set(SOURCES "xpt2046.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
+    REQUIRES esp3d_log lvgl
 )
