Code base for http module and http service

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,12 +1,16 @@
 # main application directives
-set(SOURCES . core core/esp3dcommands
+set(SOURCES .
+    core core/esp3dcommands
     modules/authentication
     modules/serial
     modules/network
+    modules/http
     modules/filesystem
     modules/filesystem/sd
     modules/filesystem/flash
 )
-set(INCLUDES . core/includes modules)
+set(INCLUDES .
+    core/includes
+    modules)
 idf_component_register(SRC_DIRS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES})
