Move esp3d strings functions to namespace
Add POC code for handler and command line parameters  and embedded files

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,6 +5,7 @@ set(SOURCES .
     modules/serial
     modules/network
     modules/http
+    modules/http/handlers
     modules/filesystem
     modules/filesystem/sd
     modules/filesystem/flash
@@ -13,4 +14,5 @@ set(INCLUDES .
     core/includes
     modules)
 idf_component_register(SRC_DIRS ${SOURCES}
-    INCLUDE_DIRS ${INCLUDES})
+    INCLUDE_DIRS ${INCLUDES}
+    EMBED_FILES "embedded/favicon.ico" "embedded/index.html.gz")
