Update code to support idf 5.0 - WIP- currently only ESP32-S3-HMI is supported
add websocket basic features for webUI session management

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -6,6 +6,7 @@ set(SOURCES .
     modules/network
     modules/http
     modules/http/handlers
+    modules/websocket
     modules/filesystem
     modules/filesystem/sd
     modules/filesystem/flash
