Fix compilations issue due to idf 5.0
Enable websocket server to sdkconfig which needed it

--- a/targets/ESP32_2432S028R/components/xpt2046_no_spi/CMakeLists.txt
+++ b/targets/ESP32_2432S028R/components/xpt2046_no_spi/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "xpt2046.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES esp3d_log lvgl
+    REQUIRES esp3d_log lvgl driver
 )
