--- a/targets/ESP32_ROTRICS_DEXARM35/components/touch_spi/CMakeLists.txt
+++ b/targets/ESP32_ROTRICS_DEXARM35/components/touch_spi/CMakeLists.txt
@@ -3,4 +3,5 @@ set(SOURCES "touch_spi.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
+    REQUIRES esp3d_log driver
 )
