--- a/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components/st7796/CMakeLists.txt
+++ b/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components/st7796/CMakeLists.txt
@@ -3,5 +3,5 @@ set(SOURCES "st7796.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES esp3d_log lvgl esp_lcd
+    REQUIRES esp3d_log lvgl esp_lcd driver
 )
