--- a/targets/ESP32_ROTRICS_DEXARM35/components/lcd_backlight/CMakeLists.txt
+++ b/targets/ESP32_ROTRICS_DEXARM35/components/lcd_backlight/CMakeLists.txt
@@ -3,4 +3,4 @@ set(SOURCES "esp_lcd_backlight.c")
 set(INCLUDES .)
 idf_component_register(SRCS ${SOURCES}
     INCLUDE_DIRS ${INCLUDES}
-    REQUIRES esp3d_log)
+    REQUIRES esp3d_log driver)
