Do better generic ALL_CLIENTS dispatch API
Add WebSocket WebUI client support in dispatch
Fix bug in  esp3d_msg_t * Esp3DClient::copyMsg( esp3d_msg_t  msg) that always send nullptr
Add uint8_t * support in addition to const char* to  websocket pushMsgTxt / BroadcastTxt

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
         "interface/ftdi/esp32_devkitj_v1.cfg",
         "target/esp32s3.cfg"
     ],
-    "cmake.configureOnOpen": false
+    "cmake.configureOnOpen": false,
+    "files.associations": {
+        "tuple": "cpp"
+    }
 }
