Add web update support
Clean code
Comment some verbose debug

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -10,6 +10,7 @@ set(SOURCES .
     modules/filesystem
     modules/filesystem/sd
     modules/filesystem/flash
+    modules/update
 )
 set(INCLUDES .
     core/includes
