--- a/docs/esp3dcnf.ini
+++ b/docs/esp3dcnf.ini
@@ -2,12 +2,11 @@
 #Hostname string of 32 chars max
 hostname = myesp
 
-#Radio mode BT, WIFI-STA, WIFI-AP, ETH-STA, OFF
-radio_mode = WIFI-STA 
+#Radio mode BT, STA, AP, SETUP, OFF
+radio_mode = STA 
 
-#Station fallback mode BT, WIFI-AP, OFF
-sta_fallback  = WIFI-AP
-
+#Station fallback mode BT, SETUP, OFF
+sta_fallback  = SETUP
 #Active when boot device or not  Yes / No
 Radio_enabled = Yes
 
@@ -45,12 +44,6 @@ AP_IP = 192.168.0.1
 AP_channel = 11
 
 [services] 
-#Active or not Serial Bridge Yes / No
-Serial_Bridge_active = Yes
-
-# Serial Bridge baudrate
-Serial_Bridge_Baud = 115200
-
 #Active or not HTTP Yes / No
 HTTP_active = Yes
 
@@ -130,38 +123,10 @@ USER_PASSWORD = xxxxxxx
 #session time out in min
 Sesion_timeout = 3
 
-#Sensor type if enabled None / DHT11 / DHT22 / ANALOG / BMP280 / BME280
-SENSOR_TYPE = NONE
-#sensor poiling interval in ms
-SENSOR_INTERVAL = 30000
-
-
 [system]
-#Target Firmware Marlin / Repetier / MarlinKimbra / Smoothieware / GRBL
+#Target Firmware: Marlin / Repetier  / Smoothieware / GRBL / grblHAL / HP_GL
 TargetFW=Marlin
 
 #Baud Rate
 Baud_rate = 115200
-
-#Boot delay in ms
-Boot_delay = 5000
-
-#Boot verbose Yes / No
-Boot_verbose = No
-
-#Outputs
-#printer Screen Yes / No
-Active_Remote_Screen = Yes
-#esp3d Screen Yes / No
-Active_ESP3D_Screen = Yes
-#ESP3D Serial Yes / No
-Active_Serial = Yes
-#Serial Bridge Yes / No
-Active_Serial_Bridge = Yes
-#Websocket Yes / No
-Active_WebSocket = Yes
-#Telnet Yes / No
-Active_Telnet = Yes
-#Bluetooth Yes / No
-Active_BT = Yes
 
