Add code base for notifications - WIP
Add Code base for ESP610 settings
Fix ESP401 do not handle V=<empty> for empty string
Fix ESP420 using wrong id for FW and it is not recognized by webUI
Add targetFirmware internal variable  to prepare GCODE stream part

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SOURCES .
     modules/filesystem/sd
     modules/filesystem/flash
     modules/update
+    modules/notifications
 )
 set(INCLUDES .
     core/includes
