Add SSDP_IDF support - WIP
Add several templates for issue / sponsoring /  stale

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,9 @@
 {
-    "idf.portWin": "COM6",
+    "idf.portWin": "COM9",
     "idf.flashType": "UART",
     "idf.adapterTargetName": "esp32s3",
     "idf.openOcdConfigs": [
-        "interface/ftdi/esp32_devkitj_v1.cfg",
-        "target/esp32s3.cfg"
+        "board/esp32s3-bridge.cfg"
     ],
     "cmake.configureOnOpen": false,
     "files.associations": {
