Add code base for socket server - WIP
Move esp3d_state_t from network to settings for consistency
Add ESP130/131
Fix typo in comment of ESP120

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,8 @@
         "sstream": "cpp",
         "strstream": "cpp",
         "unordered_map": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "map": "cpp",
+        "xtree": "cpp"
     }
 }
