--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -8,4 +8,4 @@ ko_fi: esp3d # Replace with a single Ko-fi username
 liberapay: ESP3D
 #issuehunt: # Replace with a single IssueHunt username
 #otechie: # Replace with a single Otechie username
-custom: "https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=Y8FFE7NA4LJWQ"
+custom: "https://www.paypal.com/donate/?cmd=_s-xclick&hosted_button_id=FQL59C749A78L"
