POC of USB Host support - WIP

--- a/docs/esp3dcnf.ini
+++ b/docs/esp3dcnf.ini
@@ -127,6 +127,12 @@ Sesion_timeout = 3
 #Target Firmware: Marlin / Repetier  / Smoothieware / GRBL / grblHAL / HP_GL
 TargetFW=Marlin
 
+#Output: SERIAL / USB
+output=SERIAL
+
 #Baud Rate
 Baud_rate = 115200
+
+#Baud Rate
+USB_Serial_Baud_rate = 115200
 
