--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,7 @@ elseif(ESP32S3_HMI43V3)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32S3_HMI43V3/components/bsp")
     set(EXTRA_COMPONENT_DIRS targets/ESP32S3_HMI43V3/components)
     set(TFT_TARGET "ESP32S3_HMI43V3")
+    add_compile_options(-DESP3D_USB_SERIAL_FEATURE=1)
 elseif(ESP32_ROTRICS_DEXARM35)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32_ROTRICS_DEXARM35/components/bsp")
     set(EXTRA_COMPONENT_DIRS targets/ESP32_ROTRICS_DEXARM35/components)
@@ -83,6 +84,7 @@ elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components/bsp")
     set(EXTRA_COMPONENT_DIRS targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
     set(TFT_TARGET "ESP32S3_ZX3D50CE02S_USRC_4832")
+    add_compile_options(-DESP3D_USB_SERIAL_FEATURE=1)
 endif()
 
 # Add entry point for customizations headers
