Initial code base for GCode Host Service
Add python tool to calculate string check sum (CRC8)

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SOURCES .
     modules/ssdp
     modules/socket_server
     modules/usb_serial
+    modules/gcode_host
 )
 set(INCLUDES .
     core/includes
