set SSDP_SERVICE/ESP3D_MDNS_FEATURE as feature flag
Put WIP features flags

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -5,25 +5,64 @@ set(SOURCES .
     modules/authentication
     modules/serial
     modules/network
-    modules/http
-    modules/http/handlers
-    modules/websocket
     modules/filesystem
-    modules/filesystem/sd
     modules/filesystem/flash
-    modules/update
-    modules/notifications
-    modules/mDNS
-    modules/socket_server
     modules/usb_serial
-    modules/gcode_host
 )
+
+if(WIFI_SERVICE)
+    # TODO
+endif()
 
 if(SSDP_SERVICE)
     list(APPEND SOURCES "modules/ssdp")
 endif()
 
+if(MDNS_SERVICE)
+    list(APPEND SOURCES "modules/mDNS")
+endif()
+
+if(BT_SERVICE)
+    # TODO
+endif()
+
+if(WEB_SERVICES)
+    list(APPEND SOURCES "modules/http")
+    list(APPEND SOURCES "modules/http/handlers")
+    list(APPEND SOURCES "modules/websocket")
+endif()
+
+if(TELNET_SERVICE)
+    list(APPEND SOURCES "modules/socket_server")
+endif()
+
+if(SD_CARD_SERVICE)
+    list(APPEND SOURCES "modules/filesystem/sd")
+endif()
+
+if(NOTIFICATIONS_SERVICE)
+    list(APPEND SOURCES "modules/notifications")
+endif()
+
+if(UPDATE_SERVICE)
+    list(APPEND SOURCES "modules/update")
+endif()
+
+if(GCODE_HOST_SERVICE)
+    list(APPEND SOURCES "modules/gcode_host")
+endif()
+
+unset(WIFI_SERVICE CACHE)
 unset(SSDP_SERVICE CACHE)
+unset(MDNS_SERVICE CACHE)
+unset(BT_SERVICE CACHE)
+unset(WEB_SERVICES CACHE)
+unset(TELNET_SERVICE CACHE)
+unset(WS_SERVICE CACHE)
+unset(SD_CARD_SERVICE CACHE)
+unset(NOTIFICATIONS_SERVICE CACHE)
+unset(UPDATE_SERVICE CACHE)
+unset(GCODE_HOST_SERVICE CACHE)
 
 set(INCLUDES .
     core/includes
