Add TFT_UI_SERVICE / ESP3D_DISPLAY_FEATURE  feature flag on ESP32_2432S028R

--- a/targets/ESP32_2432S028R/components/disp_spi/CMakeLists.txt
+++ b/targets/ESP32_2432S028R/components/disp_spi/CMakeLists.txt
@@ -1,7 +1,11 @@
 # Component directive
-set(SOURCES "disp_spi.c")
-set(INCLUDES .)
-idf_component_register(SRCS ${SOURCES}
-    INCLUDE_DIRS ${INCLUDES}
-    REQUIRES esp3d_log lvgl driver
-)
+if(TFT_UI_SERVICE)
+    set(SOURCES "disp_spi.c")
+    set(INCLUDES .)
+    idf_component_register(SRCS ${SOURCES}
+        INCLUDE_DIRS ${INCLUDES}
+        REQUIRES esp3d_log lvgl driver
+    )
+endif()
+
+unset(TFT_UI_SERVICE CACHE)
