--- a/targets/ESP32_2432S028R/components/ili9341/CMakeLists.txt
+++ b/targets/ESP32_2432S028R/components/ili9341/CMakeLists.txt
@@ -1,7 +1,11 @@
 # Component directive
-set(SOURCES "ili9341.c")
-set(INCLUDES .)
-idf_component_register(SRCS ${SOURCES}
-    INCLUDE_DIRS ${INCLUDES}
-    REQUIRES esp3d_log lvgl disp_spi
-)
+if(TFT_UI_SERVICE)
+    set(SOURCES "ili9341.c")
+    set(INCLUDES .)
+    idf_component_register(SRCS ${SOURCES}
+        INCLUDE_DIRS ${INCLUDES}
+        REQUIRES esp3d_log lvgl disp_spi
+    )
+endif()
+
+unset(TFT_UI_SERVICE CACHE)
