Add TELNET_SERVICE / ESP3D_TELNET_FEATURE feature flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,7 @@ OPTION(MDNS_SERVICE "MDNS service" OFF)
 OPTION(WIFI_SERVICE "WiFi service" ON)
 OPTION(BT_SERVICE "Bluetooth service" ON)
 OPTION(WEB_SERVICES "Web Services http/websocket" ON)
-OPTION(TELNET_SERVICE "Telnet service" ON)
+OPTION(TELNET_SERVICE "Telnet service" OFF)
 OPTION(WS_SERVICE "WebSocket data service" ON)
 OPTION(TFT_UI_SERVICE "TFT UI service" OFF)
 OPTION(SD_CARD_SERVICE "SD card service" ON)
