Add SD_CARD_SERVICE /ESP3D_SD_CARD_FEATURE feature flag
Fix several glitch with others feature flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ OPTION(WEB_SERVICES "Web Services http/websocket" ON)
 OPTION(TELNET_SERVICE "Telnet service" ON)
 OPTION(WS_SERVICE "WebSocket data service" ON)
 OPTION(TFT_UI_SERVICE "TFT UI service" ON)
-OPTION(SD_CARD_SERVICE "SD card service" ON)
+OPTION(SD_CARD_SERVICE "SD card service" OFF)
 OPTION(NOTIFICATIONS_SERVICE "Notifications service" ON)
 OPTION(UPDATE_SERVICE "Update service" ON)
 OPTION(GCODE_HOST_SERVICE "GCode Streaming service" ON)
@@ -60,7 +60,7 @@ add_compile_options(-DLV_LVGL_H_INCLUDE_SIMPLE=1)
 # ESP3D-TFT specific log level
 # Enabled  = 1
 # Disabled = 0
-add_compile_options(-DESP3D_TFT_LOG=0)
+add_compile_options(-DESP3D_TFT_LOG=1)
 
 # ESP3D-TFT specific bechmark
 # Enabled  = 1
@@ -128,19 +128,23 @@ if(GCODE_HOST_SERVICE)
 endif()
 
 if(ESP32_2432S028R)
+    add_compile_options(-DESP3D_SD_FEATURE_IS_SPI=1)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32_2432S028R/components/bsp")
     set(EXTRA_COMPONENT_DIRS targets/ESP32_2432S028R/components)
     set(TFT_TARGET "ESP32_2432S028R")
 elseif(ESP32S3_HMI43V3)
+    add_compile_options(-DESP3D_SD_FEATURE_IS_SPI=1)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32S3_HMI43V3/components/bsp")
     set(EXTRA_COMPONENT_DIRS targets/ESP32S3_HMI43V3/components)
     set(TFT_TARGET "ESP32S3_HMI43V3")
     add_compile_options(-DESP3D_USB_SERIAL_FEATURE=1)
 elseif(ESP32_ROTRICS_DEXARM35)
+    add_compile_options(-DESP3D_SD_FEATURE_IS_SDIO=1)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32_ROTRICS_DEXARM35/components/bsp")
     set(EXTRA_COMPONENT_DIRS targets/ESP32_ROTRICS_DEXARM35/components)
     set(TFT_TARGET "ESP32_ROTRICS_DEXARM35")
 elseif(ESP32S3_ZX3D50CE02S_USRC_4832)
+    add_compile_options(-DESP3D_SD_FEATURE_IS_SPI=1)
     add_compile_options("-I${CMAKE_SOURCE_DIR}/targets/ESP32S3_ZX3D50CE02S_USRC_4832/components/bsp")
     set(EXTRA_COMPONENT_DIRS targets/ESP32S3_ZX3D50CE02S_USRC_4832/components)
     set(TFT_TARGET "ESP32S3_ZX3D50CE02S_USRC_4832")
