Add ESP3D_HTTP_FEATURE/WEB_SERVICES as feature flag
Fix more glitches in others feature flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ OPTION(WEB_SERVICES "Web Services http/websocket" ON)
 OPTION(TELNET_SERVICE "Telnet service" ON)
 OPTION(WS_SERVICE "WebSocket data service" ON)
 OPTION(TFT_UI_SERVICE "TFT UI service" ON)
-OPTION(SD_CARD_SERVICE "SD card service" OFF)
+OPTION(SD_CARD_SERVICE "SD card service" ON)
 OPTION(NOTIFICATIONS_SERVICE "Notifications service" ON)
 OPTION(UPDATE_SERVICE "Update service" ON)
 OPTION(GCODE_HOST_SERVICE "GCode Streaming service" ON)
@@ -92,7 +92,7 @@ if(WIFI_SERVICE)
 endif()
 
 if(BT_SERVICE)
-    add_compile_options(-DESP3D_BLUETTOTH_FEATURE=1)
+    add_compile_options(-DESP3D_BLUETOOTH_FEATURE=1)
 endif()
 
 if(WEB_SERVICES)
