Import embedded files according WIFI_SERVICE flag

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -23,6 +23,7 @@ if(WIFI_SERVICE)
         list(APPEND SOURCES "modules/http")
         list(APPEND SOURCES "modules/http/handlers")
         list(APPEND SOURCES "modules/websocket")
+        set(EMBEDDEDFILES "embedded/favicon.ico.gz" "embedded/index.html.gz")
     endif()
 
     if(TELNET_SERVICE)
@@ -50,6 +51,13 @@ if(GCODE_HOST_SERVICE)
     list(APPEND SOURCES "modules/gcode_host")
 endif()
 
+set(INCLUDES .
+    core/includes
+    modules)
+idf_component_register(SRC_DIRS ${SOURCES}
+    INCLUDE_DIRS ${INCLUDES}
+    EMBED_FILES ${EMBEDDEDFILES})
+
 unset(WIFI_SERVICE CACHE)
 unset(SSDP_SERVICE CACHE)
 unset(MDNS_SERVICE CACHE)
@@ -61,10 +69,3 @@ unset(SD_CARD_SERVICE CACHE)
 unset(NOTIFICATIONS_SERVICE CACHE)
 unset(UPDATE_SERVICE CACHE)
 unset(GCODE_HOST_SERVICE CACHE)
-
-set(INCLUDES .
-    core/includes
-    modules)
-idf_component_register(SRC_DIRS ${SOURCES}
-    INCLUDE_DIRS ${INCLUDES}
-    EMBED_FILES "embedded/favicon.ico.gz" "embedded/index.html.gz")
