Add setting in CMakelists.txt to disable color on log

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,10 +58,12 @@ add_compile_options(-DLV_CONF_INCLUDE_SIMPLE=1)
 add_compile_options(-DLV_LVGL_H_INCLUDE_SIMPLE=1)
 
 # ESP3D-TFT specific log level
-# All  = 1
+# All  = 2
 # Error only = 1
 # Disabled = 0
 add_compile_options(-DESP3D_TFT_LOG=2)
+# Disable ANSI color to fit some serial terminals 
+add_compile_options(-DDISABLE_COLOR_LOG=1)
 
 
 # ESP3D-TFT specific bechmark
