Move esp3d_config_file to its own module for re-use it
Change ambiguous name in update service

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES .
     modules/filesystem
     modules/filesystem/flash
     modules/usb_serial
+    modules/config_file
 )
 
 if(WIFI_SERVICE)
