Code base for ESP460 and translation service - WIP

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES .
     modules/filesystem/flash
     modules/usb_serial
     modules/config_file
+    modules/translations
 )
 
 if(WIFI_SERVICE)
